@@ -9,7 +9,13 @@ package com.powsybl.iidm.network.impl;
 
 import com.powsybl.iidm.network.*;
 import com.powsybl.commons.ref.Ref;
+import com.powsybl.iidm.network.impl.regulation.VoltageRegulationAdderImpl;
+import com.powsybl.iidm.network.impl.regulation.VoltageRegulationImpl;
+import com.powsybl.iidm.network.regulation.*;
 import gnu.trove.list.array.TDoubleArrayList;
+
+import java.util.Optional;
+import java.util.Set;
 
 /**
  * {@inheritDoc}
@@ -27,6 +33,8 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
     private double minP;
 
     private double maxP;
+
+    private VoltageRegulationImpl voltageRegulation;
 
     BatteryImpl(Ref<NetworkImpl> ref, String id, String name, boolean fictitious, double targetP, double targetQ, double minP, double maxP) {
         super(ref, id, name, fictitious);
@@ -144,7 +152,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public TerminalExt getTerminal() {
-        return terminals.get(0);
+        return terminals.getFirst();
     }
 
     /**
@@ -176,7 +184,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public ReactiveCapabilityCurveAdder newReactiveCapabilityCurve() {
-        return new ReactiveCapabilityCurveAdderImpl(this);
+        return new ReactiveCapabilityCurveAdderImpl<>(this);
     }
 
     /**
@@ -184,7 +192,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public MinMaxReactiveLimitsAdder newMinMaxReactiveLimits() {
-        return new MinMaxReactiveLimitsAdderImpl(this);
+        return new MinMaxReactiveLimitsAdderImpl<>(this);
     }
 
     /**
@@ -199,6 +207,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
             targetP.add(targetP.get(sourceIndex));
             targetQ.add(targetQ.get(sourceIndex));
         }
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.extendVariantArraySize(initVariantArraySize, number, sourceIndex));
     }
 
     /**
@@ -209,6 +218,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
         super.reduceVariantArraySize(number);
         targetP.remove(targetP.size() - number, number);
         targetQ.remove(targetQ.size() - number, number);
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.reduceVariantArraySize(number));
     }
 
     /**
@@ -221,5 +231,36 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
             targetP.set(index, targetP.get(sourceIndex));
             targetQ.set(index, targetQ.get(sourceIndex));
         }
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.allocateVariantArrayElement(indexes, sourceIndex));
+    }
+
+    @Override
+    public VoltageRegulation getVoltageRegulation() {
+        return this.voltageRegulation;
+    }
+
+    public Optional<VoltageRegulationImpl> getOptionalVoltageRegulation() {
+        return Optional.ofNullable(this.voltageRegulation);
+    }
+
+    @Override
+    public VoltageRegulationAdder<Battery> newVoltageRegulation() {
+        return new VoltageRegulationAdderImpl<>(this, getNetwork().getRef());
+    }
+
+    @Override
+    public void removeVoltageRegulation() {
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.setTerminal(null));
+        this.voltageRegulation = null;
+    }
+
+    @Override
+    public void setVoltageRegulation(VoltageRegulation voltageRegulation) {
+        this.voltageRegulation = (VoltageRegulationImpl) voltageRegulation;
+    }
+
+    @Override
+    public Set<RegulationMode> getAllowedRegulationModes() {
+        return Set.of(RegulationMode.VOLTAGE, RegulationMode.REACTIVE_POWER);
     }
 }
